# ChangeLog for dev-embedded/mysmartctl
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mysmartctl-9999 (06 Nov 2011)

  06 Nov 2011; Michael Weber <xmw@gentoo.org> +mysmartctl-9999.ebuild,
  +metadata.xml:
  Initial import
