@@ -1,13 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD mysmartctl-9999.ebuild 509 RMD160 08f365b7e15b1e8fd2ad95908a522db87bf69c61 SHA1 2ae8276b2f965fac8b3da7c7d921a85acce84388 SHA256 fff2ce539f7f12a511551c0e93c1f4aad0b3ef8b725e9c30e915e9edb36143ae
-MISC ChangeLog 262 RMD160 9ee2591f9112258f186ac28d7307aa7d157afab5 SHA1 e16a7b88bef6e1389996e6298f81b592ab5e476e SHA256 7d44d357c8eb8d81a63339f7cab1f3a198800e5b49bc482cb7b7fa23944090e9
-MISC metadata.xml 245 RMD160 6b03982a4d5f32d9fa6b9259ae36f9fcb07c8404 SHA1 fb16c7b4c5ab071dd979f761b8bb075f5396b737 SHA256 375a1da02cd2c393ce2378a73c1ce08134bc030b3bb378c6a4d6ca9cd5be1f8d
+DIST mysmartctl-0_p20111211.tar.gz 18143 SHA256 3122613554e6c18a4c1d8505cb6bfe951210d9e8142b1f51619a67ec0897298b SHA512 18baa4bc6331ffb8084de2cae18c2b6908a0978fa02331faa3eaa634fabb9ad73dec1c1cdd6c2635be43ce3daee236ae0fb25054c7e7412dd14ffedd3b606f47 WHIRLPOOL 0eba2bb1b73e219910cabbd35afe13b56f004c2dd68f56207bf6489276510e366c0cbc9d96d01b0a4953a040c340af8bd023b79962bb0b2001e8ef86543aeb10
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk63C4cACgkQknrdDGLu8JDBBgD+MdJQ3zfgcHX3w3yfgWD1yM28
-gva/hThkbYSMyH+ljSsBAJjFczuzNo2BJx8xYiugmqQLTnaU6agswqlEcnpDC3ZT
-=HCHr
+iF4EAREIAAYFAlBwFZoACgkQknrdDGLu8JBaygD8DOKxswMd+WuiJ3uTRdxsuTmg
+a7+5ZvmRwFBcc4oXEmEA/2TTsoZcccmGvD7deLUmKuq9eaWa8h7yZwuz6TLS6+Wp
+=BK11
 -----END PGP SIGNATURE-----
