@@ -1,6 +1,12 @@
 # ChangeLog for dev-embedded/mysmartctl
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*mysmartctl-0_p20111211 (06 Oct 2012)
+
+  06 Oct 2012; Michael Weber <xmw@gentoo.org> +mysmartctl-0_p20111211.ebuild,
+  mysmartctl-9999.ebuild:
+  Add snapshot version
 
 *mysmartctl-9999 (06 Nov 2011)
 
